--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
                 <button type="button" class="btn btn-primary">Biznes</button>
                 <button type="button" class="btn btn-primary">Diniy</button>
               </div>
+
+              <div class="block w-50 mt-2">
+                <ul class="list-group">
+                    <li class="list-group-item">An item <span class="float-end badge bg-info">Diniy</span></li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">A fourth item</li>
+                    <li class="list-group-item">And a fifth one</li>
+                  </ul>
+              </div>
         </div>
     </body>
 </html>
