--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- only css -->
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous"
-        />
+        <link rel="stylesheet" href="bootstrap-5.3.0/css/bootstrap.min.css">
         <title>My book filter</title>
     </head>
     <body>
@@ -43,11 +38,7 @@
 
               <div class="block w-50 mt-2">
                 <ul class="list-group">
-                    <li class="list-group-item">An item <span class="float-end badge bg-info">Diniy</span></li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                    <li class="list-group-item">A fourth item</li>
-                    <li class="list-group-item">And a fifth one</li>
+                    <li class="list-group-item">Ikki eshik orasi <span class="float-end badge bg-info">Badiiy</span></li>
                   </ul>
               </div>
         </div>
