--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- only css -->
-        <link rel="stylesheet" href="bootstrap-5.3.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bootstrap-5.3.0/css/bootstrap.css">
         <title>My book filter</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
             <div class="row">
                 <h1 class="display-4 text-center">My Book</h1>
             </div>
-            <form>
+            <form id="book-form">
                 <div class="mb-3">
                     <label class="form-label">Title</label>
                     <input type="text" class="form-control" />
@@ -42,5 +42,7 @@
                   </ul>
               </div>
         </div>
+
+        <script src="js/main.js"></script>
     </body>
 </html>
