--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- only css -->
-        <link rel="stylesheet" href="bootstrap-5.3.0/css/bootstrap.css">
-        <title>My book filter</title>
+        <title>Add book</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+         rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container mt-4">
+        <div class="container">
             <div class="row">
-                <h1 class="display-4 text-center">My Book</h1>
+                <h2>Adding Book</h2>
             </div>
-            <form id="book-form">
-                <div class="mb-3">
-                    <label class="form-label">Title</label>
-                    <input type="text" required class="form-control" id="title"/>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Type</label>
-                    <input type="text" required class="form-control" list="date" id="type"/>
-                    <datalist id="date">
-                        <option>Badiiy</option>
-                        <option>Biznes</option>
-                        <option>Diniy</option>
-                    </datalist>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-            <div class="btn-group mt-3" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-primary">All</button>
-                <button type="button" class="btn btn-primary">Badiiy</button>
-                <button type="button" class="btn btn-primary">Biznes</button>
-                <button type="button" class="btn btn-primary">Diniy</button>
-              </div>
+            <div class="row">
+                <form action="#" id="bookForm">
+                    <div class="mb-3">
+                        <label class="form-label">Name</label>
+                        <input type="text" class="form-control" name="book" id="bookTitle">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Type</label>
+                        <input type="text" class="form-control" name="type" id="bookType" list="data">
+                        <datalist id="data">
+                            <option >Badiiy</option>
+                            <option >Diniy</option>
+                            <option >Fantastik</option>
+                            <option >Ilmiy</option>
+                        </datalist>
+                    </div>
 
-              <div class="block w-50 mt-2">
-                <ul class="list-group"></ul>
-              </div>
+                    <button class="btn btn-primary mb-3" type="submit">Submit</button>
+                </form>
+
+                <div class="btn-group mb-3">
+                    <button class="btn btn-primary" type="button">All</button>
+                    <button class="btn btn-primary" type="button">Badiiy</button>
+                    <button class="btn btn-primary" type="button">Biznes</button>
+                    <button class="btn btn-primary" type="button">Diniy</button>
+                </div>
+
+                <ul class="list-group">
+                    
+                </ul>
+            </div>
         </div>
-
-        <script src="js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
